ai/base/openwebui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwebui
  namespace: ai
  labels:
    app: openwebui
    app.kubernetes.io/component: openwebui
    app.kubernetes.io/part-of: ai
    app.kubernetes.io/name: openwebui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openwebui
      app.kubernetes.io/component: openwebui
      app.kubernetes.io/part-of: ai
      app.kubernetes.io/name: openwebui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: openwebui
        app.kubernetes.io/component: openwebui
        app.kubernetes.io/part-of: ai
        app.kubernetes.io/name: openwebui
    spec:
      containers:
      - name: openwebui
        image: ghcr.io/open-webui/open-webui:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        tty: true
        volumeMounts:
          - name: openwebui-pvc
            mountPath: /app/backend/data 
        securityContext: {}
        resources:
          requests:
            memory: "500Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      volumes:
        - name: openwebui-pvc
          persistentVolumeClaim:
            claimName: openwebui
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openwebui
    app.kubernetes.io/component: openwebui
    app.kubernetes.io/part-of: ai
    app.kubernetes.io/name: openwebui
  name: openwebui
  namespace: ai
spec:
  selector:
    app: openwebui
    app.kubernetes.io/component: openwebui
    app.kubernetes.io/part-of: ai
    app.kubernetes.io/name: openwebui
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
