ai/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama
  labels:
    app.kubernetes.io/component: ollama
    app.kubernetes.io/name: ollama
    app.kubernetes.io/part-of: ai
  namespace: ai
  annotations:
    #cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: mydomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollama
                port:
                  number: 11434
  tls:
    - secretName: tls-certificate
      hosts:
        - mydomain.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searxng
  labels:
    app.kubernetes.io/component: searxng
    app.kubernetes.io/name: searxng
    app.kubernetes.io/part-of: ai
  namespace: ai
  annotations:
    #cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: mydomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: searxng
                port:
                  number: 8080
  tls:
    - secretName: tls-certificate
      hosts:
        - mydomain.com
